app-dev/styles/base/layout.css
/* ... */
			.entity-body .f-list > a > .cell > .label,
			.entity-body .f-list     > .cell > .label {
				display: block;
				font-size: 0.6rem;
				font-weight: lighter;
				white-space: nowrap;
				margin-top: 0.1rem;
				margin-bottom: 0.5rem;
			}
			.entity-body .f-list > a > .cell > .content,
			.entity-body .f-list     > .cell > .content {
				display: block;
				font-size: 1rem;
				line-height: 1rem;
				white-space: nowrap;
				height: 1rem;
				padding: 0.6rem 0 0 0;
			}
			.entity-body .f-list > a > .cell.hero > .content,
			.entity-body .f-list     > .cell.hero > .content {
				font-size: 1.6em;
				padding-top: 0!important;
				height: 1.6rem;
			}

			@media only screen and (max-width: 330px) { /* iPhone 4/4S/5/5S/SE */
				.entity-body .f-list > a > .cell > .content,
				.entity-body .f-list     > .cell > .content {
					padding-top: 0.3rem;
				}
				.entity-body .f-list > a > .cell.hero > .content,
				.entity-body .f-list     > .cell.hero > .content {
					font-size: 1.3em;
					height: 1.3rem;
				}
			}


			.entity-body .f-list > a > .cell > .content .digits,
			.entity-body .f-list     > .cell > .content .digits {
				font-weight: 300;
			}


			.entity-body .f-list.labels-at-bottom > a > .cell,
			.entity-body .f-list.labels-at-bottom     > .cell {
				padding-bottom: 1rem; 
			}
			.entity-body .f-list.labels-at-bottom > a > .cell > .label,
			.entity-body .f-list.labels-at-bottom     > .cell > .label {
				position: absolute;
				bottom: 0.1rem;
				margin: 0 auto;
			}


			.entity-body .f-list.labels-at-left {
				padding: 0.5rem;
				margin: -0.5rem;
				}
				.entity-body .f-list.labels-at-left > a > .cell,
				.entity-body .f-list.labels-at-left     > .cell {
					width: 100%;
					display: block;
					line-height: 1;
				}
				.entity-body .f-list.labels-at-left > a > .cell > .label,
				.entity-body .f-list.labels-at-left > a > .cell > .content,
				.entity-body .f-list.labels-at-left     > .cell > .label,
				.entity-body .f-list.labels-at-left     > .cell > .content {
					display: inline-block;
					vertical-align: middle;
					padding: 0;
					margin: 0;
				}
				.entity-body .f-list.labels-at-left > a > .cell > .label,
				.entity-body .f-list.labels-at-left     > .cell > .label {
					width: 3rem;
				}


			.entity-body .f-list.compact-lines {
				}
				.entity-body .f-list.compact-lines > a > .cell > .label,
				.entity-body .f-list.compact-lines     > .cell > .label {
					padding: 0;
					margin: 0 0 0.5rem 0;
					line-height: 1;
				}
				.entity-body .f-list.compact-lines > a > .cell > .content,
				.entity-body .f-list.compact-lines     > .cell > .content {
					padding: 0;
					margin: 0;
					line-height: 1.2;
				}


	.entity-buyable {
		}

		.entity-buyable .entity-body .f-list {
		width: calc(100% - 4.5rem);
		}

		.entity-buyable .call-to-action {
			display: block;
			position: absolute;
			right: 0.8rem;
			top: 2.5rem;
			bottom: 0;
		}

		.entity-buyable .call-to-action::before {
			content: '';
			display: inline-block;
			vertical-align: middle;
			width: 0px;
			height: 100%;
		}

		.entity-buyable .call-to-action > *,
		.entity-buyable .call-to-action [role="button"],
		.entity-buyable .call-to-action button {
			display: inline-block;
			vertical-align: middle;
			margin: 0;
			}
			.entity-buyable .call-to-action [role="button"],
			.entity-buyable .call-to-action button {
				box-sizing: border-box;
				width: 4rem;
				height: 1.6rem;
				padding: 0;
				line-height: 1.58rem;
				font-size: 0.65rem;
				font-weight: 200;
			}

		.entity-buyable.entity-time-limited .product-caption-block {
			margin-bottom: 0.3rem;
			}
			.entity-buyable.entity-time-limited .call-to-action {
				top: 2.65rem;
				height: 4rem;
				bottom: auto;
			}
			.entity-buyable.entity-time-limited .call-to-action .count-down-disc,
			.entity-buyable.entity-time-limited .call-to-action [role="button"].progress-rings-container,
			.entity-buyable.entity-time-limited .call-to-action button.progress-rings-container,
			.entity-buyable.entity-time-limited .call-to-action .progress-rings-container {
				padding: 0;
				width: 3.75rem;
				height: 3.75rem;
			}

			.entity-buyable.entity-time-limited .call-to-action .progress-rings-container .label em,
			.entity-buyable.entity-time-limited .call-to-action .progress-rings-container .label {
				font-size: 1.4rem;
				font-weight: 400;
			}


	.entity-info.entity-type-regular .entity-body .f-list {
		padding-bottom: 0.25rem;
		}
		.entity-info.entity-type-regular .entity-body .f-list > .cell > .label {
			margin-bottom: 0.25rem;
		}
		.entity-info.entity-type-regular .entity-body .f-list > .cell > .content {
			padding-top: 0;
			font-size: 0.75rem;
		}


	.entity-info.entity-type-fund .entity-body .f-list > .cell:first-child {
		width: 55%;
		}
		.entity-info.entity-type-fund .entity-body .f-list > .cell:last-child {
			width: 45%;
		}


	.entity-info.entity-type-fixed-income {
		}

		.entity-info.entity-type-fixed-income .entity-body {
			padding-top: 0.8rem;
			padding-bottom: 0.8rem;
			}
			.entity-info.entity-type-fixed-income .entity-body .f-list.labels-at-bottom > .cell:first-child {
				width: 70%;
			}
			.entity-info.entity-type-fixed-income .entity-body .f-list.labels-at-bottom > .cell:last-child {
				width: 30%;
			}
			.entity-info.entity-type-fixed-income .entity-body .f-list.labels-at-bottom > .cell > .content {
				padding-top: 0.9rem;
			}
			.entity-info.entity-type-fixed-income .entity-body .f-list.labels-at-bottom > .cell.hero > .content {
				font-size: 1.85em;
				height: 1.9rem;
			}
			.entity-info.entity-type-fixed-income .entity-body .f-list.labels-at-bottom > .cell:last-child > .content {
				font-size: 0.75rem;
			}


	.product-abstract .entity-info.entity-type-fixed-income .entity-body {
		margin: 0;
		}
/* ... */

